[project]
name = "ncwms-mm-rproxy"
version = "1.0.0"
description = "PCIC reverse proxy for ncWMS via modelmeta"
authors = [{ name = "Rod Glover", email = "rglover@uvic.ca" }]
license = { text = "GNU General Public License v3 (GPLv3)" }
readme = "README.md"
requires-python = ">=3.10, <4"
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Environment :: Web Environment",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Internet",
    "Topic :: Scientific/Engineering",
    "Topic :: Database",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

dependencies = [
    "Flask>=2.3",
    "Flask-SQLAlchemy>=3.1",
    "Flask-Cors>=4.0.0",
    "SQLAlchemy >=2.0.40,<3.0.0",
    "requests>=2.31.0",
    "gunicorn>=20.1.0",
    "urllib3>2.0",
    #"modelmeta==1.0.0",
    "cachetools==4.1.1",
    "nchelpers (>=5.5.11,<6.0.0)",
    "modelmeta @ git+https://github.com/pacificclimate/modelmeta.git@py-sprint-25q1",
]


[project.optional-dependencies]
test = ["pytest==8.3.5"] #  "testing.postgresql>=1.3.0" 

[project.urls]
homepage = "http://www.pacificclimate.org/"
repository = "https://github.com/pacificclimate/ncWMS-mm-rproxy"

[[tool.poetry.source]]
name = "pcic"
url = "https://pypi.pacificclimate.org/simple"
priority = "supplemental"
