[project]
name = "ncwms-mm-rproxy"
version = "1.0.0"
description = "PCIC reverse proxy for ncWMS via modelmeta"
authors = [{ name = "Rod Glover", email = "rglover@uvic.ca" }]
license = { text = "GNU General Public License v3 (GPLv3)" }
readme = "README.md"
requires-python = ">=3.10, <4"
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Environment :: Web Environment",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Internet",
    "Topic :: Scientific/Engineering",
    "Topic :: Database",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

dependencies = [
    "cachetools>=4.1.1,<5.0.0",
    "flask>=3.1.1,<4.0.0",
    "flask_cors>=5.0.1,<6.0.0",
    "flask_sqlalchemy>=3.1.1,<4.0.0",
    "gunicorn>=23.0.0,<24.0.0",
    "gevent>=25.5.1,<26.0.0",
    "nchelpers>=5.5.12,<6.0.0",
    "modelmeta>=2.0.1,<3.0.0",
    "requests>=2.32.3,<3.0.0",
    "sqlalchemy>=2.0.41,<3.0.0",
    "urllib3>=2.4.0,<3.0.0",
]


[project.optional-dependencies]
test = ["pytest>=8.3.5,<9.0.0"]

[project.urls]
homepage = "http://www.pacificclimate.org/"
repository = "https://github.com/pacificclimate/ncWMS-mm-rproxy"

[[tool.poetry.source]]
name = "pcic"
url = "https://pypi.pacificclimate.org/simple"
priority = "supplemental"
